test/inputs/toplevel/bad/duplicate-snippet-description.miros
string test
  desc this will fail
  name hey
  desc because two descriptions exist
  snip test
